Fixed error message in scrollbar for projects and skills

--- a/src/index.css
+++ b/src/index.css
@@ -187,3 +187,11 @@
   padding: 0;
   text-align: center;
 }
+
+@utility scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
